@@ -1,3 +1,7 @@
+2007-12-10  Ales Hakl  <dfox@mahoro.dfox.org>
+
+	* src/control.c (native_form_destructuring_bind): destructuring-bind
+
 2007-12-10  Ales Hakl  <ales at hakl dot net>
 
 	* configure.ac: set default load:*path* correctly 
